fix button layout bug

--- a/client/containers/GHList.sass
+++ b/client/containers/GHList.sass
@@ -22,20 +22,15 @@
     height: 70px
     margin-left: 48px
     margin-right: 62px
+    flex-direction: row
     justify-content: space-between
     overflow: hidden
     @media screen and (max-width: 451px)
       margin-left: 16px
       margin-right: 16px
 
-
-    .button
+    .button-wrapper
       margin-top: 28px
-
-    .orderby-wrapper
-      display: flex
-      justify-content: flex-end
-
 
   .detail
     display: flex
